# Aimeer-Backend

./: Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
aimeer/: asgi.py  settings.py  urls.py  wsgi.py
apps/feedback/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/feedback/migrations/: 0001_initial.py
apps/products/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/products/migrations/: 0001_initial.py  0002_product_image.py
nginx/: nginx.conf
